--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -430,7 +430,7 @@ commands:
             echo '<<parameters.python-version>>' >> /tmp/cachefile
             echo '<<parameters.install-python>>' >> /tmp/cachefile
             echo '<<parameters.install-nvidia-apex>>' >> /tmp/cachefile
-            date -u '+%y/%m/%d' >> /tmp/cachefile
+            date -v+1d -u '+%y/%m/%d' >> /tmp/cachefile
 
       - restore_cache:
           keys:
