--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -517,13 +517,18 @@ commands:
           steps:
             - run:
                 name: Install Nvidia Apex
-                description: "Apex installation needs Cuda 12.1 because Pytorch binaries were compiled by Cuda 12.1."
                 command: |
                   if ! pip show apex; then
+                    # Ninja speeds up Apex compilation.
+                    if ! pip show ninja; then
+                      pip install ninja
+                    fi
+                    # Apex installation needs Cuda 12.1 because Pytorch binaries were compiled by Cuda 12.1.
                     wget https://developer.download.nvidia.com/compute/cuda/12.1.0/local_installers/cuda_12.1.0_530.30.02_linux.run
                     sudo sh cuda_12.1.0_530.30.02_linux.run --toolkit --silent
                     nvcc --version
                     git clone https://github.com/NVIDIA/apex ~/apex
+                    git -C ~/apex checkout tags/24.04.01
                     pip install -v --disable-pip-version-check --no-cache-dir --no-build-isolation --config-settings "--build-option=--cpp_ext" --config-settings "--build-option=--cuda_ext" ~/apex
                   fi
 
