Modifications to Helm template and values.yaml to read in a COSI secret, lookup the secret in the cluster and extract the required details from its JSON object to populate the type, bucket, accessKey, secretKey and endpointUrl fields in master-config.yaml.
Minor modifications to MNIST pytorch example to run the CNN model and enable checkpointing!

--- a/examples/tutorials/mnist_pytorch/const.yaml
+++ b/examples/tutorials/mnist_pytorch/const.yaml
@@ -1,10 +1,13 @@
 name: mnist_pytorch_const
+checkpoint_storage:
+  save_trial_latest: 5
 hyperparameters:
   learning_rate: 1.0
   n_filters1: 32
   n_filters2: 64
   dropout1: 0.25
   dropout2: 0.5
+  checkpoint_freq: 100
 searcher:
   name: single
   metric: validation_loss
