--- a/helm/charts/determined/values.yaml
+++ b/helm/charts/determined/values.yaml
@@ -229,10 +229,10 @@ checkpointStorage:
   # Comment out if not using `shared_fs`. Users are strongly discouraged from using `shared_fs` for
   # storage beyond initial testing as most Kubernetes cluster nodes do not have a shared file
   # system.
-  type: shared_fs
-  hostPath: /tmp/checkpoints
+  # type: shared_fs
+  # hostPath: /tmp/checkpoints
   # By default, shared_fs is not mounted to the server pod. Change this to true to enable checkpoint downloads from the server.
-  mountToServer: false
+  # mountToServer: false
   # For storing in GCS.
   # type: gcs
   # bucket: <bucket_name>
