--- a/examples/tutorials/mnist_pytorch/const.yaml
+++ b/examples/tutorials/mnist_pytorch/const.yaml
@@ -11,5 +11,7 @@ hyperparameters:
 searcher:
   name: single
   metric: validation_loss
+  max_length:
+    batches: 100
   smaller_is_better: true
-entrypoint: python3 train.py --epochs 1
+entrypoint: python3 train.py
