--- a/agent/Makefile
+++ b/agent/Makefile
@@ -146,6 +146,12 @@ release-ee: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordat
 release-ee: packaging/LICENSE buildx
 	goreleaser --rm-dist -f ./.goreleaser_ee.yml
 
+.PHONY: release-ee-dryrun
+release-ee: export GORELEASER_CURRENT_TAG := $(VERSION_TAG)-ee
+release-ee: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^v?[0-9.]+-ee$$' | grep "$(VERSION_TAG)-ee" -A1 | sed -n '2 p')
+release-ee: packaging/LICENSE buildx
+	goreleaser --rm-dist -f ./.goreleaser_ee_dryrun.yml
+
 define manifest_publish
 	for image in $(2); do \
 		docker push $$image; \
