--- a/master/Makefile
+++ b/master/Makefile
@@ -9,7 +9,7 @@ MOCK_INPUTS = Makefile ./internal/sproto/task.go ./internal/db/database.go ./int
 GORELEASER = goreleaser
 
 export VERSION := $(shell ../version.sh)
-export VERSION_TAG:=$(shell ../version.sh -t)
+export VERSION_TAG :=$(shell ../version.sh -t)
 export VERSION_DOCKER := $(shell ../version.sh -d)
 
 export GO111MODULE := on
@@ -291,8 +291,8 @@ release-ee: export DET_SEGMENT_MASTER_KEY ?=
 release-ee: export DET_SEGMENT_WEBUI_KEY ?=
 release-ee: export DET_EE_LICENSE_KEY = $(shell cat ../license.txt)
 release-ee: export DET_EE_PUBLIC_KEY = $(shell cat ../public.txt)
-release-ee: export GORELEASER_CURRENT_TAG := $(VERSION_TAG)
-release-ee: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^v?[0-9.]+-ee$$' | grep "$(VERSION_TAG)" -A1 | sed -n '2 p')
+release-ee: export GORELEASER_CURRENT_TAG := $(VERSION_TAG)-ee
+release-ee: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^v?[0-9.]+-ee$$' | grep "$(GORELEASER_CURRENT_TAG)" -A1 | sed -n '2 p')
 release-ee: gen buildx
 	docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 	$(GORELEASER) --rm-dist -f ./.goreleaser_ee.yml
@@ -302,8 +302,9 @@ release-ee-dryrun: export DET_SEGMENT_MASTER_KEY ?=
 release-ee-dryrun: export DET_SEGMENT_WEBUI_KEY ?=
 release-ee-dryrun: export DET_EE_LICENSE_KEY = $(shell cat ../license.txt)
 release-ee-dryrun: export DET_EE_PUBLIC_KEY = $(shell cat ../public.txt)
-release-ee-dryrun: export GORELEASER_CURRENT_TAG := $(VERSION_TAG)
-release-ee-dryrun: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^v?[0-9.]+-ee$$' | grep "$(VERSION_TAG)" -A1 | sed -n '2 p')
+# VERSION_TAG v0.38.0+dryrun becomes v.0.38.0-ee+dryrun
+release-ee-dryrun: export GORELEASER_CURRENT_TAG := $(shell echo $(VERSION_TAG) | sed "s/+dryrun/-ee&/g")
+release-ee-dryrun: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^v?[0-9.]+-ee$$' | grep "$(GORELEASER_CURRENT_TAG)" -A1 | sed -n '2 p')
 release-ee-dryrun: gen buildx
 	docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 	$(GORELEASER) --rm-dist -f ./.goreleaser_ee_dryrun.yml
