--- a/agent/Makefile
+++ b/agent/Makefile
@@ -147,7 +147,7 @@ release-ee: packaging/LICENSE buildx
 	goreleaser --rm-dist -f ./.goreleaser_ee.yml
 
 .PHONY: release-ee-dryrun
-# VERSION_TAG v0.38.0+dryrun becomes v.0.38.0-ee+dryrun
+# VERSION_TAG v0.38.0+dryrun becomes v0.38.0-ee+dryrun
 release-ee-dryrun: export GORELEASER_CURRENT_TAG := $(shell echo $(VERSION_TAG) | sed "s/+dryrun/-ee&/g")
 release-ee-dryrun: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^v?[0-9.]+-ee$$' | grep "$(GORELEASER_CURRENT_TAG)" -A1 | sed -n '2 p')
 release-ee-dryrun: packaging/LICENSE buildx
