--- a/helm/.goreleaser_ee.yml
+++ b/helm/.goreleaser_ee.yml
@@ -6,12 +6,11 @@ build:
 release:
   github:
     owner: determined-ai
-    # Starting with 0.38.0, we have decide to make EE features publicly available in the oss repo.
     name: determined
   mode: keep-existing
   extra_files:
     - glob: build/determined-latest.tgz
-      name_template: "hpe-mlde-helm-chart_{{ .Env.VERSION }}.tgz"
+      name_template: "hpe-mlde-helm-chart_{{ .VERSION }}.tgz"
 
   # be sure to keep this in sync between agent/master/helm
   # the "include" functionality is only in the pro version
