--- a/helm/Makefile
+++ b/helm/Makefile
@@ -56,7 +56,7 @@ release-gh-ee:
 	goreleaser --rm-dist -f ./.goreleaser_ee.yml
 
 .PHONY: release-gh-ee-dryrun
-# VERSION_TAG v0.38.0+dryrun becomes v.0.38.0-ee+dryrun
+# VERSION_TAG v0.38.0+dryrun becomes v0.38.0-ee+dryrun
 release-gh-ee-dryrun: export GORELEASER_CURRENT_TAG := $(shell echo $(VERSION_TAG) | sed "s/+dryrun/-ee&/g")
 release-gh-ee-dryrun: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^v?[0-9.]+-ee$$' | grep "$(GORELEASER_CURRENT_TAG)" -A1 | sed -n '2 p')
 release-gh-ee-dryrun:
