--- a/agent/.goreleaser_ee_dryrun.yml
+++ b/agent/.goreleaser_ee_dryrun.yml
@@ -1,4 +1,4 @@
-project_name: hpe-mlde-agent
+project_name: hpe-mlde-agent-dryrun
 
 snapshot:
   name_template: "{{ .Env.VERSION }}"
@@ -23,41 +23,6 @@ archives:
         strip_parent: true
       - src: "packaging/LICENSE"
         strip_parent: true
-
-#brews:
-#  - name: determined-agent
-#    tap:
-#      owner: determined-ai
-#      name: homebrew-determined
-#    url_template: "https://github.com/determined-ai/determined/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
-#    caveats: |
-#      Determined agent config is located at #{etc}/determined/agent.yaml
-#    homepage: "https://github.com/determined-ai/determined"
-#    license: "Apache-2.0"
-#    folder: Formula
-#    install: |
-#      bin.install "determined-agent"
-#
-#      doc.install "LICENSE"
-#
-#      (var/"log/determined").mkpath
-#
-#      (etc/"determined").mkpath
-#      inreplace "etc/determined/agent.yaml" do |s|
-#        s.gsub! "# master_host: 0.0.0.0", "master_host: 127.0.0.1"
-#        s.gsub! "# master_port: 80", "master_port: 8080"
-#      end
-#
-#      Pathname("etc/determined/agent.yaml").append_lines <<~EOS
-#        container_master_host: host.docker.internal
-#      EOS
-#
-#      etc.install "etc/determined/agent.yaml" => "determined/agent.yaml"
-#    service: |
-#      run [opt_bin/"determined-agent", "--config-file", etc/"determined/agent.yaml"]
-#      keep_alive false
-#      error_log_path var/"log/determined/agent-stderr.log"
-#      log_path var/"log/determined/agent-stdout.log"
 
 nfpms:
   - maintainer: "Determined AI <ai-open-source@hpe.com>"
@@ -91,13 +56,13 @@ nfpms:
 release:
   github:
     owner: determined-ai
-    name: determined
+    name: determined-dryrun
 
   # be sure to keep this in sync between agent/master/helm
   # the "include" functionality is only in the pro version
   header: |
     ## Release Notes
-    [{{ .Tag }}](https://github.com/determined-ai/determined/blob/{{ .Tag }}/docs/release-notes.rst)
+    [{{ .Tag }}](https://github.com/determined-ai/determined-dryrun/blob/{{ .Tag }}/docs/release-notes.rst)
 
 dockers:
   # amd64
