--- a/helm/.goreleaser_ee_dryrun.yml
+++ b/helm/.goreleaser_ee_dryrun.yml
@@ -1,4 +1,4 @@
-project_name: determined-helm-dryrun
+project_name: hpe-mlde-helm-dryrun
 
 build:
   skip: true
@@ -10,7 +10,7 @@ release:
   mode: keep-existing
   extra_files:
     - glob: build/determined-latest.tgz
-      name_template: "determined-helm-chart_{{ .VERSION }}.tgz"
+      name_template: "hpe-mlde-helm-chart_{{ .VERSION }}.tgz"
 
   # be sure to keep this in sync between agent/master/helm
   # the "include" functionality is only in the pro version
