ci: fix oss and ee release process and add ee-dryrun release process (#10249)
* add an ee-dryrun release process
* Correct the usage of .Env.VERSION_DOCKER, .ENV.VERSION and .VERSION in the goreleaser yml files.
* fix a qemu error in docker build arm images

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1803,10 +1803,12 @@ jobs:
           password: ${NGC_API_KEY}
       - pre-package-and-push-system
       - make-component:
+          dryrun: <<parameters.dryrun>>
           component: master
           target: release
           no_output_timeout: "30m"
       - make-component:
+          dryrun: <<parameters.dryrun>>
           component: agent
           target: release
           no_output_timeout: "30m"
@@ -1815,6 +1817,10 @@ jobs:
           path: /tmp/pkgs
 
   package-and-push-system-release-ee:
+    parameters:
+      dryrun:
+        type: boolean
+        default: false
     docker:
       - image: <<pipeline.parameters.docker-image>>
         environment:
@@ -1832,12 +1838,16 @@ jobs:
           username: ${DOCKER_USER}
           password: ${DOCKER_PASS}
       - pre-package-and-push-system
-      - run:
-          no_output_timeout: 30m
-          command: make -C master release-ee
-      - run:
-          no_output_timeout: 30m
-          command: make -C agent release-ee
+      - make-component:
+          dryrun: <<parameters.dryrun>>
+          component: master
+          target: release-ee
+          no_output_timeout: "30m"
+      - make-component:
+          dryrun: <<parameters.dryrun>>
+          component: agent
+          target: release-ee
+          no_output_timeout: "30m"
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
 
   publish-helm-gh-rc:
@@ -5396,6 +5406,65 @@ workflows:
       - upload-try-now-template:
           context: determined-production
           filters: *release-filters
+
+  release-ee-dryrun:
+    jobs:
+      - build-helm:
+          filters: *release-dryrun
+
+      - build-proto:
+          filters: *release-dryrun
+
+      - build-react:
+          context: determined-production
+          matrix:
+            parameters:
+              ee: [true]
+          filters: *release-dryrun
+
+      - build-docs:
+          matrix:
+            parameters:
+              ee: [true]
+          context: determined-production
+          filters: *release-dryrun
+          requires:
+            - build-helm
+            - build-proto
+
+      - upload-docs-search-index:
+          requires:
+            - build-docs
+          context: determined-production
+          filters: *release-dryrun
+
+      - package-and-push-system-release-ee:
+          dryrun: true
+          requires:
+            - build-react
+            - build-docs
+          context: determined-production
+          filters: *release-dryrun
+
+      - publish-docs:
+          matrix:
+            parameters:
+              ee: [true]
+              dryrun: [true]
+          requires:
+            - build-docs
+          context: determined-production
+          filters: *release-dryrun
+
+      - publish-helm-gh:
+          matrix:
+            parameters:
+              ee: [true]
+              dryrun: [true]
+          requires:
+            - build-helm
+          context: determined-production
+          filters: *release-dryrun
 
   release-ee:
     jobs:
